# aerionuaserver

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  BuildingFromSource.md  CMakeLists.txt  CMakePresets.json  LICENSE  PLCUserNodeFormat.md  README.md  RobotUserNodeFormat.md  configuration.md  dependabot.yaml  index.md  installation.md  introduction.md  main.cpp  package-lock.json  plc.md  robot.md  vcpkg.json
.github/workflows/: ci.yaml  deploy.yml
.vitepress/: config.ts
builds/unix/: control
builds/windows/: aerionuaserver.wixproj  aerionuaserver.wxs  ui.wxs
gui/: .gitignore  clients.toml  package-lock.json  package.json
gui/src/: app.html  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
gui/src/lib/: Device.svelte  DeviceCategory.svelte  IconButton.svelte  IconButtonDisabled.svelte  Log.svelte  Navbar.svelte  ThirdPartyLicenses.svelte
gui/src/lib/forms/: selectdata.ts
gui/src/lib/stores/: device.ts  server.ts
gui/src/lib/translations/: lang.json  translations.ts
gui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
gui/src/routes/about/: +page.svelte
gui/static/themes/: prism-coy.min.css  prism-dark.min.css
include/: plc.h  r3.h  robot.h  slmp.h  socket.h  wrapper.h
resources/: icon.rc
specifications/: plc-specification.json  robot-specification.json
tests/: encryption_test.py  filewatching_test.py  plc_test.py  robot_test.py  test_clients.json  test_server.json
tests/encryption/: create_self-signed.py
tests/mockup/: plc.py  robot.py
(+23 files in other folders)
